--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -1,37 +1,29 @@
 {
-    "test":"測試",
-    "initialize":"初始化",
-    "reset_alarm":"異常排除",
-    "buzzer_off":"蜂鳴器關閉",
-    "cst-remove":"移除卡匣",
-    "login":"登入",
-    "connection-states":"連線狀態",
-    "battery-level":"電量",
-    "mileage":"里程數",
-    "status":"狀態",
-    "abnormal-record":"異常紀錄",
-    "operation":"操作",
-    "3d_model":"3D 模型",
-    "Status_info":"狀態資訊",
-    "current_position":"目前位置",
-    "target_position":"目標位置",
-    "action_name":"動作名稱",
-    "abormal":"異常",
-    "carrier_id":"載物ID",
-    "agv_control":"車控",
-    "zaxis_up_down":"升降",
-    "agv_control_notify_text":"請先登入權限並Offline&Manual才可操作手動控車",
-    "zaxis_control_notify_text":"請先登入權限並Offline&Manual才可操作Z軸與by pass Hardware Limited設定",
-    "up_limit_pose":"上點位",
-    "down_limit_pose":"下點位",
-    "up":"上升",
-    "down":"下降",
-    "original":"原點",
-    "stop":"停止",
-    "cancel_init_action_notify":"確定要取消初始化動作?",
-    "start_init_action_notify":"確定要進行初始化動作? 初始化動作開始後 Fork 將會下降,請確認 Fork上有無貨物，並確認 AGV 周圍無障礙物",
-    "charging_current":"充電電流",
-    "wait_online_text":"AGV正在執行上線請求，請稍後...",
-    "refresh":"重新整理",
-    "clear_alarm_records":"清除異常紀錄"
+  "App": {
+    "Header": {
+      "view_mode": "檢視模式",
+      "chinese": "中文",
+      "english": "英文"
+    }
+  },
+  "Menu": {
+    "Home": "主頁",
+    "System Alarm": "系統警報",
+    "wip_manager": "帳籍管理",
+    "vehicle manager": "車輛管理",
+    "system settings": "系統設置",
+    "map and display": "地圖與顯示",
+    "map edit": "地圖編輯",
+    "agv display": "AGV 視覺化",
+    "vehicle battery managnment": "電量管理",
+    "equipment management": "設備管理",
+    "charge station management": "充電站管理",
+    "user management": "用戶管理",
+    "Querys": "資料查詢",
+    "Task History": "歷史任務",
+    "Alarm History": "歷史警報",
+    "Trajectory": "軌跡查詢",
+    "Instruments Measure Result": "儀器量測結果查詢",
+    "utilization rate": "稼動率"
+  }
 }
