新增上傳地圖背景檔案與裁切功能

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -25,5 +25,13 @@
     "Trajectory": "Trajectory",
     "Instruments Measure Result": "Instruments Measure",
     "utilization rate": "Utilization"
+  },
+  "HomeView": {
+    "AGVStatus": {
+      "AGVStatus": {
+        "vehicle-status": "Vehicle Status",
+        "vehicle-name": "Vehicle Name"
+      }
+    }
   }
 }
