--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -17,6 +17,7 @@
     "agv display": "AGV Visualize",
     "vehicle battery managnment": "AGV PM",
     "equipment management": "Equipments",
+    "racks management": "Racks",
     "charge station management": "Chargers",
     "user management": "Users",
     "Querys": "Data Query",
