--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -17,6 +17,7 @@
     "agv display": "AGV 視覺化",
     "vehicle battery managnment": "電量管理",
     "equipment management": "設備管理",
+    "racks management": "Rack管理",
     "charge station management": "充電站管理",
     "user management": "用戶管理",
     "Querys": "資料查詢",
