--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -34,5 +34,24 @@
         "vehicle-name": "車輛名稱"
       }
     }
-  }
+  },
+  "Action": "動作",
+  "Vehicle": "車輛",
+  "source": "來源",
+  "TaskDispathActionButton": {
+    "Destine": "目的地",
+    "dispatch-confirm": "派送",
+    "Back To Select Action": "返回選擇動作"
+  },
+  "Cancel": "取消",
+  "auto-choise-vehicle": "自動選車",
+  "Transfer": "搬運",
+  "Charge": "充電",
+  "Exchange Battery": "交換電池",
+  "Measure": "巡檢量測",
+  "Move": "移動",
+  "Park": "停車",
+  "Unload": "取貨",
+  "Load": "放貨",
+  "Dispatch": "任務派送"
 }
