--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -14,7 +14,7 @@
       "LOGOUT": "登出",
       "Switch user": "切換使用者",
       "systemalarm": "系統警報",
-      "alarmreset": "警報復歸",
+      "alarmreset": "清除警報",
       "eqalarm": "設備警報"
     }
   },
