--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -151,5 +151,6 @@
   },
   "hidden": "Hidden",
   "Show": "Show",
-  "PathNetwork": "Path Network"
+  "PathNetwork": "Path Network",
+  "select-vehicle": "SELECT AGV"
 }
