--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -125,19 +125,64 @@
   "Dispatch": "任務派送",
   "IncompleteTasks": "未完成任務",
   "CompleteTasks": "已完成任務",
+  "Search": {
+    "Search": "搜尋",
+    "Output_csv_file": "輸出csv檔",
+    "Start_Time": "起始時間",
+    "End_Time": "結束時間",
+    "Move": "移動",
+    "Load": "取貨",
+    "UnLoad": "放貨",
+    "Transfer": "搬運",
+    "Charge": "充電",
+    "Measure": "量測",
+    "ExchangeBattrey": "交換電池",
+    "Completed": "完成",
+    "Fail": "失敗",
+    "Cancel": "取消",
+    "Total_First": "共",
+    "Total_Last": "筆"
+  },
   "TaskTable": {
     "NoTasks": "沒有任務",
     "TaskName": "任務ID",
+    "AGV_Name": "AGV名稱",
+    "EQ_Name": "設備名稱",
     "Time": "時間",
     "Action": "動作",
+    "Final": "執行結果",
     "TaskStatus": "狀態",
     "ExcuteAgvName": "執行車輛",
     "Source": "起點",
     "Destine": "終點",
+    "Source_Slot": "起點 Slot",
+    "Destine_Slot": "終點 Slot",
     "Dispatcher": "派工人員",
+    "Fail_reason": "失敗原因",
     "CstID": "貨物ID",
     "FinishTime": "結束時間",
     "RecievedTime": "接收時間"
+  },
+  "AlarmTable": {
+    "Time": "時間",
+    "Occur_Time": "發生時間",
+    "EQ_Name": "設備名稱",
+    "Alarm_code": "異常碼",
+    "Alarm_description": "警報描述",
+    "Alarm_Type": "異常類型",
+    "TaskName": "任務名稱",
+    "Occur_Tag": "發生地點",
+    "Duration": "持續時間(s)",
+    "Clear_OP": "清除警報人員",
+    "Solution": "排除方法"
+  },
+  "Rack": {
+    "Creat_ID": "新增帳籍",
+    "Edit_ID": "修改帳籍",
+    "Remove_ID": "移除帳籍",
+    "copy": "複製到剪貼簿",
+    "Sensor_Flash": "在席Sensor閃爍",
+    "Cargo_Spaces": "水位"
   },
   "Map": {
     "Options": {
