--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -101,12 +101,12 @@
   "Vehicle": "Vehicle",
   "source": "From",
   "Remove": "Remove",
-  "Choose_Sourse_from_Map": "Choose Sourse from Map",
-  "Choose_Dest_from_Map": "Choose Dest from Map",
-  "Choose_Port": "Choose Port",
+  "Choose_Sourse_from_Map": "Select Sourse from Map",
+  "Choose_Dest_from_Map": "Select Dest from Map",
+  "Choose_Port": "Select Port",
   "Transport": "Transport",
   "Transport_Port": "Transport Port",
-  "Choose_Transport_Port_from_Map": "Choose Transport Port from Map",
+  "Choose_Transport_Port_from_Map": "Select Transport Port from Map",
   "TaskDispathActionButton": {
     "Destine": "To",
     "dispatch-confirm": "Dispatch",
@@ -125,19 +125,64 @@
   "Dispatch": "Dispatch",
   "IncompleteTasks": "Incomplete",
   "CompleteTasks": "Completed",
+  "Search": {
+    "Search": "Search",
+    "Output_csv_file": "Output csv file",
+    "Start_Time": "Start Time",
+    "End_Time": "End Time",
+    "Move": "Move",
+    "Load": "Load",
+    "UnLoad": "UnLoad",
+    "Transfer": "Transfer",
+    "Charge": "Charge",
+    "Measure": "Measure",
+    "ExchangeBattrey": "Exchange Battrey",
+    "Completed": "Completed",
+    "Fail": "Fail",
+    "Cancel": "Cancel",
+    "Total_First": "",
+    "Total_Last": " Transaction in Total"
+  },
   "TaskTable": {
     "NoTasks": "No Tasks",
-    "TaskName": "ID",
+    "TaskName": "Task ID",
+    "AGV_Name": "AGV Name",
+    "EQ_Name": "EQ Name",
     "Time": "Time",
     "Action": "Action",
+    "Final": "Final",
     "TaskStatus": "Status",
     "ExcuteAgvName": "AGV Name",
     "Source": "From",
     "Destine": "Destine",
+    "Source_Slot": "Source Slot",
+    "Destine_Slot": "Destine Slot",
     "Dispatcher": "Dispatcher",
+    "Fail_reason": "Fail reason",
     "CstID": "Cargo ID",
     "FinishTime": "End Time",
     "RecievedTime": "Recieve Time"
+  },
+  "AlarmTable": {
+    "Time": "Time",
+    "Occur_Time": "Occur Time",
+    "EQ_Name": "EQ Name",
+    "Alarm_code": "Alarm Code",
+    "Alarm_description": "Alarm Description",
+    "Alarm_Type": "Alarm Type",
+    "TaskName": "TaskName",
+    "Occur_Tag": "Occur Tag",
+    "Duration": "Duration",
+    "Clear_OP": "Clear OP",
+    "Solution": "Solution"
+  },
+  "Rack": {
+    "Creat_ID": "Creat ID",
+    "Edit_ID": "Edit ID",
+    "Remove_ID": "Remove ID",
+    "copy": "copy",
+    "Sensor_Flash": "Sensor Flash",
+    "Cargo_Spaces": "Cargo Spaces"
   },
   "Map": {
     "Options": {
