--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -176,7 +176,8 @@
     "Occur_Tag": "發生地點",
     "Duration": "持續時間(s)",
     "Clear_OP": "清除警報人員",
-    "Solution": "排除方法"
+    "Solution": "排除方法",
+    "FailureReason": "異常描述"
   },
   "Rack": {
     "Creat_ID": "新增帳籍",
