優化地圖、地圖圖例與設備管理頁面新增設備'層'的設定

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -204,9 +204,10 @@
     "MapLegend": {
       "Unloadble": "Unloadable",
       "Loadable": "Loadable",
-      "Maintaining": "Maintaining"
+      "Maintaining": "Maintaining",
+      "UnLoadLoadable": "Unload/Load"
     },
-     "PartsReplacing":"Paper Roller Replacing"
+    "PartsReplacing": "Paper Roller Replacing"
   },
   "hidden": "Hidden",
   "Show": "Show",
