地圖選單優化/異常排除顯示文件優化/設備參數設定UI優化/網頁頭部優化

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -164,7 +164,11 @@
     "CstID": "Cargo ID",
     "FinishTime": "End Time",
     "RecievedTime": "Recieve Time",
-    "FailureReason": "Failure Reason"
+    "FailureReason": "Failure Reason",
+    "UnloadTime": "Unload Time",
+    "LoadTime": "Load Time",
+    "StartLocation": "Start Location",
+    "AGVReadID": "AGV Read ID"
   },
   "AlarmTable": {
     "Time": "Time",
