修改中英文翻譯"關閉蜂鳴器"

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -15,7 +15,8 @@
       "Switch user": "Switch user",
       "systemalarm": "System Alarm",
       "alarmreset": "Alarm Reset",
-      "eqalarm": "EQP Alarm"
+      "eqalarm": "EQP Alarm",
+      "Turnoffbuzzer": "Turn off buzzer"
     }
   },
   "Menu": {
