優化地圖/修改關閉蜂鳴器翻譯

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -16,7 +16,7 @@
       "systemalarm": "System Alarm",
       "alarmreset": "Alarm Reset",
       "eqalarm": "EQP Alarm",
-      "Turnoffbuzzer": "Turn off buzzer"
+      "Turnoffbuzzer": "Buzzer OFF"
     }
   },
   "Menu": {
