任務派送失敗提示視窗顯示英文訊息

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -238,5 +238,6 @@
   "Confirm": "YES",
   "Notifies": {
     "CanNotDoUnloadWhenAGVHasCargo": " Can't do Unload action when AGV has cargo"
-  }
+  },
+  "TaskDispatchFailString": "Dispatch Task Fail"
 }
