--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -235,6 +235,17 @@
   "TaskDispatchNewUI": {
     "ConfirmDispatchText": "Are you sure you want to dispatch this task?"
   },
+  "AGVBatterySetting": {
+    "HighBatteryLevel": "High Battery Level",
+    "MediumBatteryLevel": "Medium Battery Level",
+    "MediumLowBattertLevel": "Medium Low Battert Level",
+    "LowBattertLevel": "Low Battert Level",
+    "CanExecuteAllTask": "CanExecuteAllTask",
+    "When AGV is not Charging,all task orders can be executed ": "When AGV is not Charging,all task orders can be executed ",
+    "AGVcharging onlyAGVdocharging tasks": "When the AGV is charging, only the AGV is allowed to perform charging tasks. All task orders can be executed after the battery is above the medium-high battery",
+    "AGVlowbattery onlyAGVdocharging": "When the AGV is low on battery, it will be unable to perform all task orders except charging tasks",
+    "In operation mode, the system will force the AGV to charge": " In operation mode, the system will force the AGV to charge"
+  },
   "Confirm": "YES",
   "Notifies": {
     "CanNotDoUnloadWhenAGVHasCargo": " Can't do Unload action when AGV has cargo"
