--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -235,5 +235,19 @@
   "TaskDispatchNewUI": {
     "ConfirmDispatchText": "確定要派送此任務?"
   },
-  "Confirm": "確定"
+  "AGVBatterySetting": {
+    "HighBatteryLevel": "高電量區",
+    "MediumBatteryLevel": "中高電量區",
+    "MediumLowBattertLevel": "中低電量區",
+    "LowBattertLevel": "低電量區",
+    "CanExecuteAllTask": "可執行所有任務訂單",
+    "When AGV is not Charging,all task orders can be executed": "當AGV非充電時，可執行所有任務訂單。",
+    "AGVcharging onlyAGVdocharging tasks": "當AGV進行充電時，僅允許AGV執行充電任務， 等待電量位於中高電量以上方可執行所有任務訂單。",
+    "When the AGV is low on battery, it will be unable to perform all task orders except charging tasks": "當AGV低電量時將無法進行除充電任務以外的所有任務訂單。",
+    "In operation mode, the system will force the AGV to charge": " 運轉模式下，系統會強制AGV進行充電。"
+  },
+  "Confirm": "確定",
+  "Notifies": {
+    "CanNotDoUnloadWhenAGVHasCargo": " AGV有料時，無法Unload"
+  }
 }
