中英文 >>稼動率 頁面

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -249,5 +249,11 @@
   "Confirm": "YES",
   "Notifies": {
     "CanNotDoUnloadWhenAGVHasCargo": " Can't do Unload action when AGV has cargo"
+  },
+  "AvalibilityQuery": {
+    "AGVName": "AGVName",
+    "StartDate": "StartDate",
+    "EndDate": "EndDate",
+    "Query": "Query"
   }
 }
