中英文翻譯>稼動率頁面

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -254,6 +254,9 @@
     "AGVName": "AGVName",
     "StartDate": "StartDate",
     "EndDate": "EndDate",
-    "Query": "Query"
+    "Query": "Query",
+    "PieChart": "PieChart",
+    "StraightChart": "StraightChart",
+    "MTBF/MTTR": "MTBF/MTTR"
   }
 }
