--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -143,7 +143,7 @@
     "Completed": "Completed",
     "Fail": "Fail",
     "Cancel": "Cancel",
-    "Total_First": "",
+    "Total_First": "Total",
     "Total_Last": " Transaction in Total"
   },
   "TaskTable": {
