新增 src/components/Vehicle/VechicleTrafficControlSettings.vue / 新增下載rack slot選項與顯示

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -17,7 +17,8 @@
       "alarmreset": "Alarm Reset",
       "eqalarm": "EQP Alarm",
       "Turnoffbuzzer": "Buzzer OFF"
-    }
+    },
+    "LaterRemindMe": "Notify Later"
   },
   "Menu": {
     "Home": "Home",
