Feature and Style : 軌跡查詢頁面UI調整/ 新增任務ID查詢條件輸入UI

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -276,7 +276,8 @@
     "SelectStartDate": "Select Start Date",
     "SelectEndDate": "Select End Date",
     "Success": "Success",
-    "Fail": "Fail"
+    "Fail": "Fail",
+    "taskID": "Task Name"
   },
   "InstrumentMeasureQuery": {
     "StartTime": "StartTime",
