--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -280,7 +280,8 @@
     "SelectStartDate": "選擇開始日期",
     "SelectEndDate": "選擇結束日期",
     "Success": "成功",
-    "Fail": "失敗"
+    "Fail": "失敗",
+    "taskID": "任務ID"
   },
   "InstrumentMeasureQuery": {
     "StartTime": "開始時間",
