Feature : 在地圖上顯示車輛電量狀態 / 調整地圖側邊功能選單

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -203,7 +203,8 @@
       "AgvVisible": "AGV Visible",
       "BackgroundImage": "Background Image",
       "PathVisible": "Path Visible",
-      "RegionVisible": "Region Visible"
+      "RegionVisible": "Region Visible",
+      "AgvBatVisible": "AGV Bat."
     },
     "Notification": {
       "SelectSource": "Select [SOURCE] Equipment",
