軌跡圖任務列表新增任務狀態與車輛欄位顯示

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -278,7 +278,9 @@
     "SelectEndDate": "Select End Date",
     "Success": "Success",
     "Fail": "Fail",
-    "taskID": "Task Name"
+    "taskID": "Task Name",
+    "State": "Status",
+    "AGV": "Vehicle"
   },
   "InstrumentMeasureQuery": {
     "StartTime": "StartTime",
