優化軌跡圖/任務歷史查詢新增軌跡圖顯示按鈕

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -280,7 +280,9 @@
     "Fail": "Fail",
     "taskID": "Task Name",
     "State": "Status",
-    "AGV": "Vehicle"
+    "AGV": "Vehicle",
+    "FromStation": "Source",
+    "ToStation": "Destine"
   },
   "InstrumentMeasureQuery": {
     "StartTime": "StartTime",
